src/objects/Application_Commissioner__c.object
<CustomObject>
    <description>This will be a junction object between commissioner and application and will allow one commissioner to be added to multiple applications (saves too many contact records being created).</description>
    <fields>
        <fullName>Application__c</fullName>
        <description>This is the application the commissioner is related to.</description>
        <inlineHelpText>This is the application the commissioner is related to.</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Commissioners</relationshipLabel>
        <relationshipName>Application_Commissioners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Commissioner__c</fullName>
        <label>Commissioner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Commissioners</relationshipLabel>
        <relationshipName>Application_Commissioners</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Lead_Commissioner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Lead Commissioner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marked_as_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marked as Complete</label>
        <type>Checkbox</type>
    </fields>
    <label>Application Commissioner</label>
    <nameField>
        <label>Application Commisioner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Commissioners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>